[gd_scene load_steps=5 format=3 uid="uid://bxvw8y7qkqx8"]

[ext_resource type="Script" uid="uid://qp5d64exg02y" path="res://actors/Portal.gd" id="1_portal"]
[ext_resource type="Script" uid="uid://cxf8gb242c2s8" path="res://systems/DebugBorder.gd" id="2_debug"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 40.0

[sub_resource type="Gradient" id="Gradient_1"]
colors = PackedColorArray(0.5, 0.8, 1, 1, 0.2, 0.4, 0.8, 0.3)

[node name="Portal" type="Area2D"]
script = ExtResource("1_portal")

[node name="DebugBorder" type="Node2D" parent="."]
script = ExtResource("2_debug")

[node name="PortalSprite" type="ColorRect" parent="."]
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.3, 0.6, 1, 0.8)

[node name="InnerGlow" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0.6, 0.9, 1, 0.6)

[node name="Core" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.9, 1, 1, 0.9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="PortalParticles" type="CPUParticles2D" parent="."]
amount = 30
lifetime = 2.0
emission_shape = 1
emission_sphere_radius = 35.0
direction = Vector2(0, -1)
spread = 360.0
gravity = Vector2(0, -20)
initial_velocity_min = 20.0
initial_velocity_max = 50.0
scale_amount_min = 0.5
scale_amount_max = 1.5
color_ramp = SubResource("Gradient_1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ActivationSound" type="AudioStreamPlayer2D" parent="."]
